--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,11 @@
-github_users:
-  - torvalds
-  - alshedivat
+# github_users:
+#   - vardeep-sandhu
 
-github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+# github_repos:
+#   # - alshedivat/al-folio
+#   # - twbs/bootstrap
+#   # - jekyll/jekyll
+#   # - jquery/jquery
+#   # - FortAwesome/Font-Awesome
+#   # - jpswalsh/academicons
+#   # - mathjax/MathJax
