--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,11 +1,13 @@
-# github_users:
-#   - vardeep-sandhu
+github_users:
+  - vardeep-sandhu
 
-# github_repos:
-#   # - alshedivat/al-folio
-#   # - twbs/bootstrap
-#   # - jekyll/jekyll
-#   # - jquery/jquery
-#   # - FortAwesome/Font-Awesome
-#   # - jpswalsh/academicons
-#   # - mathjax/MathJax
+github_repos:
+  - vardeep-sandhu/BinaryClassifier
+  - vardeep-sandhu/DeepLearningForVisualRecognition
+  - vardeep-sandhu/RealTimeFaceDetectionAndTracking
+  - vardeep-sandhu/VideoFramePrediction
+  - vardeep-sandhu/KFSensorFusion
+ 
+  # - FortAwesome/Font-Awesome
+  # - jpswalsh/academicons
+  # - mathjax/MathJax
