--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -7,92 +7,79 @@
       value: 14th April 1996
     - name: Languages
       value: English, German, Punjabi
-
 - title: Education
   type: time_table
   contents:
-    - title: Masters 
+    - title: M.Sc in Mobile Sensing and Robotics.
       institution: University of Bonn, Bonn, Germany
       year: 2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Studied courses like Computer Vision, Techniques of Self-Driving Cars, Mobile Sensing Robotics, Sensor and State Estimation, Deep Learning for Visual Recognition, and Point Cloud Processing.
+        - Took additional elective courses like Modern C++ for Computer Vision and Vision System which provided practical PyTorch and C++ experience.
+        - Grade - 1.4
+    - title: B.Tech. in Electronics and Communications Engineering
+      institution: Guru Nanak Dev University, India
+      year: 2017
       description:
-        - Description 1.
-        - Description 2.
+        - The course covered essential topics in Embedded Systems, Microelectronics, and mathematical topics like Linear Algebra, Statistics, and Higher-Order Calculus.
+        - I also took elective courses from the Computer Science Department like Computer Architecture and Fundamentals in Computer Sciences.
+        - Grade - 1.7
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Perception Engineer
+      institution: MotorAI GmbH, Berlin
+      year: 2023 -- Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Performed synchronization and extrinsic calibration of Radars with other sensors.
+        - Utilizing Radars for velocity estimation in the perception pipeline.
+        - Developed 3D object detector and tracking pipeline with low-level fused Radar and Lidar points.
+        - Developed TensorRT engine, Post-processor, and Pre-processor in Cuda for in-house 3D Object Detector model.
+        - Improvement in the performance and inference speed of 3D Object Detector  pipeline.
+
+    - title: Master Thesis Student
+      institution: CARIAD SE, Mönsheim
+      year: May 2022 -- Nov 2022
       description:
-        - Description 1.
-        - Description 2.
+        - Solved the task of "RADAR-based Moving Object Segmentation" in outdoor scenarios.
+        - Developed a novel transformer network in the temporal domain on the RadarScenes dataset to solve this task.
+        - Achieved state-of-the-art results with 12% improvement over baseline.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Computer Vision Intern
+      institution: Robidia GmbH, Cologne
+      year: Jan 2022 -- Mar 2022
+      description: 
+        - Developed an identity tracking and motion prediction suit for the camera slider.
+        - Implemented Kalman Filter-based motion prediction of the person-of-interest.
+        - The entire system worked at 60 fps which was critical for the smooth operation of the camera.
+        - Resulted in four new enterprise customers.
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Deep Learning Intern
+      institution: SCREWERK GmbH, Cologne
+      year: Jun 2021 -- Dec 2021
       description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Graduate Student Assistant, HiWi
+      institution: Stachniss Lab, University of Bonn
+      year: Aug 2020 -- Mar 2021
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Deep.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
 
